# depends

./: .gitmodules  .travis.yml  CMakeLists.txt  ChangeLog  README.md  bootstrap  dag.hpp  depends.hpp  exceptions.hpp  license.h  release
.github/: dependabot.yml
.github/workflows/: ci_validate_cmake.yml
details/: circularreferenceexception.hpp  documentation.hpp  iterator.hpp  node.hpp  scopedflag.hpp  serialization.hpp  sortpred.hpp  unlinker.hpp  visitors.hpp
doxygen/: Depends.dox
lib/Depends/: DAG.h  Depends.h  module.mk
lib/Depends/Details/: Iterator.h  Node.h  Visitors.h
project/gnu/: configure.ac.in  link.mk  version
project/msvc8/: Depends.sln
project/msvc8/Test_DAG/: Test_DAG.vcproj
project/msvc8/Test_Depends/: Test_Depends.vcproj
project/msvc8/Test_serializeDAG/: Test_serializeDAG.vcproj
project/msvc8/Test_serializeDepends/: Test_serializeDepends.vcproj
tests/: dag.cpp  depends.cpp  serialize_dag.cpp  serialize_depends.cpp
tests/lib/Depends/: module.mk  test.cc  test2.cc  test3.cc  test4.cc
